<?xml version="1.0"?>
<package format="2">
  <name>align_coordinate</name>
  <version>0.0.0</version>
  <description>The align_coordinate package</description>

  <maintainer email="myx1992468@gmail.com">myx</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>

</package>
